--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@edx/brand-edx.org",
+  "name": "@rfrns/brand-rfrns",
   "version": "1.0.0",
-  "description": "A package containing brand elements and SASS themes for edx.org",
+  "description": "A package containing brand elements and SASS themes for rfrns.com",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/edx/brand-edx.org.git"
+    "url": "git+https://github.com/rfrns/rfrns-brandx.git"
   },
-  "author": "edX",
-  "license": "UNLICENSED",
+  "author": "RFRNS",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/edx/brand-edx.org/issues"
+    "url": "https://github.com/rfrns/rfrns-brandx/issues"
   },
-  "homepage": "https://github.com/edx/brand-edx.org#readme",
+  "homepage": "https://github.com/rfrns/rfrns-brandx#readme",
   "publishConfig": {
     "access": "public"
   }
